Fix overflow for display, Better output formatting

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -48,7 +48,10 @@ body {
 
   .input,
   .output {
-    height: 40px;
+    min-height: 40px;
+    max-height: 50px;
+    overflow-y: hidden;
+    white-space: nowrap;
   }
 }
 
